app/assets/stylesheets/directory_objects_show.css.scss
/* ... */
/* END LANDING */

/* BODY STYLING */


/*.top {
  max-height: 15vh;
}

.middle {
  max-height: 50vh;
}

.bottom { 
  max-height: 15vh;
}*/


.main-content {
  position: absolute;
  top: 10vh;
  height: 90vh;
}


/* END BODY STYLING */

.btn-navbar-main {  //home button
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: 5px;
    padding: 0 7px;
    font-size: .7em;
}

.btn-navbar { //toggle menu list icon size
    font-size: 25px;
}

.btn-text { //toggle menu list text size
  font-size: 1.25em;
}

.navbar-fixed-top .navbar-collapse,
.navbar-fixed-bottom .navbar-collapse {
  max-height: 100%;
}


.searchbar {
  display: inline-block;  
  min-width: 65%;
}



//STOP NAVBAR FROM COLLAPSING
.navbar-header {
    float: none;
}
.navbar-toggle {
    display: block;
    padding: 10px 10px;
    margin-right: 10px;
    margin-top: 10px;
}
.navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    max-height: 100%;
}
.navbar-collapse.collapse {
    display: none!important;
}

.navbar-collapse.collapse.in {
  display: block !important; 
}
.navbar-nav {
    float: none!important;
    margin: 7.5px -15px;
}
.navbar-nav>li {
    float: none;
}
.navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
}

